[FIX] mail: view image in full-size in message list
Before this commit, images attached to a message had their preview
cropped and forced people to view with file viewer.

This square and cropped visual looks good in contexts other than
message, e.g. chatter attachment list. In message, however, most of
the time people want to share images and be able to see whole content
just from preview.

This commit fixes the issue by making image preview of message see
whole content.

Task-5259604

closes odoo/odoo#235570

--- a/addons/mail/static/src/core/common/attachment_list.scss
+++ b/addons/mail/static/src/core/common/attachment_list.scss
@@ -1,6 +1,12 @@
 .o-mail-AttachmentContainer {
-    width: 13em;
-    height: 10em;
+    &.o-inMessage.o-isImage {
+        min-width: 13em;
+        min-height: 10em;
+    }
+    &:not(.o-inMessage.o-isImage) {
+        width: 13em;
+        height: 10em;
+    }
     background-color: $gray-200;
 
     @include media-breakpoint-down(sm) {
@@ -30,6 +36,10 @@
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
     line-height: 1.25;
+}
+
+.o-mail-AttachmentImage.o-inMessage {
+    max-height: 300px;
 }
 
 .o-viewable {
